--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,7 +1,9 @@
 <view class="container">
-    <image class="avatar" src="/images/avatar/avatar-1.png"></image>
-    <text class="motto">Hello, 桔子罐头</text>
+    <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
+    <text class="motto">
+        Hello, {{userInfo.nickName}}
+    </text>
     <view catchtap="onTapJump" class="journey-container">
-        <text class="journey">开启小程序之旅</text>
+        <text class="journey">开启电影之旅</text>
     </view>
 </view>
