修改获取用户微信信息访问权限

--- a/pages/setting/open-api/login/login.wxml
+++ b/pages/setting/open-api/login/login.wxml
@@ -1,1 +1,1 @@
-<button open-type="getUserInfo" type="primary" bindtap="onTap">用户登陆</button>
+<button open-type="getUserInfo" type="primary" bindtap="onTap" class="btnlogin">用户登陆</button>
